# Core

./: CMakeLists.txt
CMakeModules/: FindYafPythonLibs.cmake
include/cameras/: angularCamera.h  architectCamera.h  orthographicCamera.h  perspectiveCamera.h
include/core_api/: background.h  color.h  environment.h  imagefilm.h  imagesplitter.h  integrator.h  light.h  material.h  mcintegrator.h  object3d.h  output.h  params.h  primitive.h  ray.h  scene.h  shader.h  surface.h  texture.h  tiledintegrator.h  vector3d.h
include/integrators/: photonintegr.h  sppm.h
include/interface/: xmlinterface.h  yafrayinterface.h
include/lights/: arealight.h
include/materials/: blendmat.h  maskmat.h  microfacet.h  roughglass.h  shinydiff.h
include/resources/: yafLogoTiny.h
include/textures/: basicnodes.h  basictex.h  layernode.h  noise.h
include/utilities/: image_buffers.h  mathOptimizations.h  math_utils.h  mcqmc.h  sample_utils.h  tiled_array.h  y_alloc.h
include/yafraycore/: hashgrid.h  kdtree.h  memoryIO.h  meshtypes.h  monitor.h  nodematerial.h  photon.h  pkdtree.h  ray_kdtree.h  spectrum.h  std_primitives.h  timer.h  triangle.h  triangle_inline.h  xmlparser.h
src/backgrounds/: darksky.cc  gradientback.cc  sunsky.cc  textureback.cc
src/bindings/: CMakeLists.txt
src/cameras/: angularCamera.cc
src/image_handlers/: CMakeLists.txt
src/integrators/: DebugIntegrator.cc  EmissionIntegrator.cc  SingleScatterIntegrator.cc  SkyIntegrator.cc  bidirpath.cc  directlight.cc  pathtracer.cc  photonintegr.cc  sppm.cc
src/xml_loader/: CMakeLists.txt  xml-loader.cc
(+38 files in other folders)
